Fixed menu icon not showing on mobile version.

--- a/css/style.css
+++ b/css/style.css
@@ -9271,7 +9271,7 @@ textarea.form-control {
     position: absolute;
     top: 0px;
     left: 0;
-    font-size: 7vw;
+    font-size: 6vw;
     color: rgba(255, 255, 255, 0.1);
     z-index: -1;
     font-weight: 900; }
